tests/error/invalid_cast.gw
// [contains] invalid cast
class C {}
class D {}
D d;
d $ C;
